# buzz-static-hosting

./: .gitignore  .release-please-manifest.json  CLAUDE.md  CONTEXT.md  README.md  docker-compose.coolify.yml  release-please-config.json  rfc.md
server/: .env.example  .gitignore  COOLIFY.md  Caddyfile  Dockerfile  docker-compose.coolify.yml  docker-compose.yml  landing.html  package-lock.json  package.json  pyproject.toml  server.py
server/scripts/: update_cloudflare_ranges.py
server/src/server/: __init__.py  __main__.py  analytics.py  api_models.py  app.py  auth.py  auth_service.py  cloudflare_diagnostics.py  config.py  cookies.py  custom_domains.py  db.py  dependencies.py  device_authorization.py  domain_activation.py  domain_capabilities.py  domain_evidence.py  domain_probes.py  domain_routing.py  domain_status.py  domain_transitions.py  environment.py  exceptions.py  github.py  github_login.py  main.py  passkeys.py  pending_store.py  search_console.py  (+5 more)
server/tests/: conftest.py  passkey_helpers.py  test_analytics.py  test_auth_service.py  test_cloudflare_diagnostics.py  test_custom_domains.py  test_dashboard.py  test_db.py  test_device_authorization.py  test_domain_activation.py  test_domain_routing.py  test_domain_status.py  test_domain_transitions.py  test_environment.py  test_github_login.py  test_host_routing.py  test_main.py  test_openapi.py  test_passkey_routes.py  test_passkeys.py  test_pending_store.py  test_routes_domains.py  test_routes_sites.py  test_search_console.py  test_site_path.py  test_site_store.py  test_traefik_control.py  test_utils.py
(+161 files in other folders)
